--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header class="d-flex-c">
             <section class="logo">
-                <img src="/logo.png" alt="bootstrap-logo">
+                <img src="/bootstrap/logo.png" alt="bootstrap-logo">
             </section>
             <div class="header-menu d-flex-c">
                 <nav class="menu-nav d-flex-c">
@@ -35,9 +35,9 @@
 
         <main class="d-flex-c">
             <section class="cover d-flex-c">
-                <img src="/service-8.jpg" alt="service-img">
+                <img src="/bootstrap/service-8.jpg" alt="service-img">
                 <div class="cover-content">
-                    <img src="/cache_60889691.png" alt="cache-img">
+                    <img src="/bootstrap/cache_60889691.png" alt="cache-img">
                     <span>In der Schornau 25 A44892 Bochum</span>
                     <span>Telefon: 0234 640 55 877 Telefax: 0234 640 55 879</span>
                     <span>E-Mail: info@radiochirurgie-rub.de</span>
@@ -57,21 +57,21 @@
             <section class="doctors d-flex-c">
                 <div class="doctor-content d-flex-c">
                     <div class="doctor-prof">
-                        <img src="/cache_60890167.jpg" alt="doctor-1">
+                        <img src="/bootstrap/cache_60890167.jpg" alt="doctor-1">
                     </div>
                     <span class="doctor-info">Some example text</span>
                     <button class="doctor-button d-flex-c">See Profile</button>
                 </div>
                 <div class="doctor-content d-flex-c">
                     <div class="doctor-prof">
-                        <img src="/cache_60890168.jpg" alt="doctor-2">
+                        <img src="/bootstrap/cache_60890168.jpg" alt="doctor-2">
                     </div>
                     <span class="doctor-info">Some example text</span>
                     <button class="doctor-button d-flex-c">See Profile</button>
                 </div>
                 <div class="doctor-content d-flex-c">
                     <div class="doctor-prof">
-                        <img src="/cache_60890169.jpg" alt="docto-3">
+                        <img src="/bootstrap/cache_60890169.jpg" alt="docto-3">
                     </div>
                     <span class="doctor-info">Some example text</span>
                     <button class="doctor-button d-flex-c">See Profile</button>
