--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </li>
                     </ul>
                 </nav>
-                <form class="d-flex-c" action="#">
+                <form action="#">
                     <input type="text" name="search-input" id="search-input">
                     <button class="search-button">Search</button>
                 </form>
