--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </ul>
                 </nav>
                 <form action="#">
-                    <input type="text" name="search-input" id="search-input">
+                    <input type="text" name="search-input" id="search-input" placeholder="search">
                     <button class="search-button">Search</button>
                 </form>
             </div>
